--- a/www/index.html
+++ b/www/index.html
@@ -27,8 +27,8 @@
     <script src="lib/angular-moment/angular-moment.min.js"></script>-->
     <script src="lib/Autolinker.js/dist/Autolinker.min.js"></script>
     <script src="lib/ngOpenFB/ngOpenFB.js"></script>
-    <script type="text/javascript" src="http://localhost:8888/faye/client.js"></script>
-    <!--<script type="text/javascript" src="http://128.199.139.107:8888/faye/client.js"></script>-->
+    <!--<script type="text/javascript" src="http://localhost:8888/faye/client.js"></script>-->
+    <script type="text/javascript" src="http://128.199.139.107:8888/faye/client.js"></script>
     
     <script src="lib/angular-faye/build/angular-faye.js"></script>
     <!-- your app's js -->
