--- a/www/index.html
+++ b/www/index.html
@@ -26,8 +26,8 @@
     <script src="lib/ngOpenFB/ngOpenFB.js"></script>
     <script src="lib/localforage/dist/localforage.js"></script>
     <script src="lib/angular-localforage/dist/angular-localForage.js"></script>
-    <script type="text/javascript" src="http://localhost:8888/faye/client.js"></script>
-    <!--<script type="text/javascript" src="http://128.199.139.107:8888/faye/client.js"></script>-->
+    <!--<script type="text/javascript" src="http://localhost:8888/faye/client.js"></script>-->
+    <script type="text/javascript" src="http://128.199.139.107:8888/faye/client.js"></script>
     <script src="lib/angular-faye/build/angular-faye.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
