--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <!--<script type="text/javascript" src="http://localhost:8888/faye/client.js"></script>-->
     <script type="text/javascript" src="http://128.199.139.107:8888/faye/client.js"></script>
     <script src="lib/angular-faye/build/angular-faye.js"></script>
+    <script src="lib/angular-faye/build/angular-faye.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
