--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     -->
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+<script src="lib/ionic-service-core/ionic-core.js"></script>
+<script src="lib/ionic-service-analytics/ionic-analytics.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
@@ -27,8 +29,8 @@
     <script src="lib/ngOpenFB/ngOpenFB.js"></script>
     <script src="lib/localforage/dist/localforage.js"></script>
     <script src="lib/angular-localforage/dist/angular-localForage.js"></script>
-    <!--<script type="text/javascript" src="http://localhost:8888/faye/client.js"></script>-->
-    <script type="text/javascript" src="http://128.199.139.107:8888/faye/client.js"></script>
+    <script type="text/javascript" src="http://localhost:8888/faye/client.js"></script>
+    <!--<script type="text/javascript" src="http://128.199.139.107:8888/faye/client.js"></script>-->
     <script src="lib/angular-faye/build/angular-faye.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
